# Advent-of-Code-2023

./: .gitignore  AOC2023.cabal  CHANGELOG.md  LICENSE  README.md
Day 1/: Main.hs  Part1.hs  Part2.hs
Day1/: Main.hs  Part1.hs  Part2.hs
Day2/: Main.hs
Day2-Text/: Main.hs  README.md
Day3/: Main.hs
Day4/: Main.hs
Day5/: Main.hs
Day6/: Main.hs
Util/: Util.hs
