cabal-version:      3.0
name:               AOC2023
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Sean Moulton

build-type:         Simple

common warnings
    ghc-options: -Wall

executable Day1
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   Day1
    default-language: Haskell2010