cabal-version:      3.0
name:               AOC2023
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Sean Moulton

build-type:         Simple

common warnings
    ghc-options: -Wall

executable Day1
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   Day1
    default-language: Haskell2010

executable Day2
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0,
    hs-source-dirs:   Day2
    default-language: Haskell2010

executable Day2-Text
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0,
                      text ^>=2.1
    hs-source-dirs:   Day2-Text
    default-language: Haskell2010

executable Day3
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0,
                      vector ^>=0.13.1.0
    hs-source-dirs:   Day3
    default-language: Haskell2010

executable Day4
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0,
                      vector ^>=0.13.1.0
    hs-source-dirs:   Day4
    default-language: Haskell2010

executable Day5
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0,
                      text ^>=2.1,
                      vector ^>=0.13.1.0,
                      containers ^>=0.7
    hs-source-dirs:   Day5,
                      Util
    other-modules:    Util
    default-language: Haskell2010

executable Day6
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0,
                      text ^>=2.1,
                      vector ^>=0.13.1.0,
    hs-source-dirs:   Day6,
                      Util
    other-modules:    Util
    default-language: Haskell2010